# psas-ers-board-bringup

./: flash-manually.sh  west.yml
apps/: CMakeLists.txt  Kconfig  Kconfig.can  TODO.txt  app.yml  ers-log-levels.conf  prj.conf
apps/boards/: ers-v3p1.overlay
apps/include/: arbiter.h  ers-adc.h  ers-can.h  ers-dac.h  gpio-in.h  keeper.h  shell-support.h
apps/shell-module/include/: shell-module.h
apps/shell-module/src/: shell-module.c
apps/src/: adc.c  arbiter.c  can.c  dac.c  gpio-in.c  keeper.c  main.c  shell-support.c
boards/psas/: ers-v3p1.dts  notes-on-board-yml.txt  notes-on-openocd.txt
notes/: 4-stm-clock-symbols.txt  5-ers-gdb-backtrace.txt  6-gdb-breakpoints.txt  chibios-hal-init.txt  clock-init-steps-spreadsheet.ods  dts-example-board-files.txt  ers-pins.txt
samples/button/: sample.yaml
samples/button/boards/: ers-v3p1.overlay
samples/button/src/: main.c
samples/can/counter/: Kconfig  app.overlay  prj.conf
samples/can/counter/scripts/: notes-sample-output.txt  rx.py  tx.py  vulcan-rx.py  vulcan-tx.py
samples/can/counter/src/: main.c
samples/hello-world/: README.rst  build-messages-001.txt  flash-call-zephyr-runner-does-not-work.txt  flash-manually.sh  prj.conf
samples/hello-world/src/: hello-world-main.c
samples/hello-world/src/set-aside/: main-hello-plus-led.c
